fix overflowing title and description & accept new line

--- a/peer-prep/src/Components/QuestionList/QuestionForm.css
+++ b/peer-prep/src/Components/QuestionList/QuestionForm.css
@@ -29,6 +29,7 @@
 
 .q-form-title {
     height: 30px;
+    width: 70%;
     padding: 0.5rem 0.5rem;
 }
 
